src/components/post/index.scss
$static-folder-url: '../../static';

.Post-container {
  display: flex;
  flex-direction: column;
  font-size: 0;

  &__Header {
    display: flex;
    flex-direction: row;
    margin: 8px 6px 8px 6px;

    &__Profile-picture {
      margin-right: 8px;

      .Pixel-image {
        width: 25px;
        height: 25px;
        border-radius: 50%;
      }
    }

    &__Username {
      align-self: center;
      font: {
        size: 13px;
        weight: bolder;
      }
    }
  }

  &__Media {
    padding-top: 2px;
    padding-bottom: 2px;
    background-color: black;

    box-shadow:
    inset 0px -1px 0px 0px rgba(255,255,255,1),
    inset 0px 1px 0px 0px rgba(127,127,127,1),
    inset 0px -2px 0px 0px rgba(224,224,224,1),
    inset 0px 2px 0px 0px rgba(0,0,0,1);

    .Pixel-image {
      width: 286px;
      height: 290px;
    }
  }

  &__Buttons {
    display: flex;
    flex-direction: row;
    margin: 6px 8px 8px 8px;

    .Button + .Button {
      margin-left: 1px;
    }
  }

  &__Likes {
    display: flex;
    flex-direction: row;
    margin: 6px 8px 8px 8px;

    &__Number {
      margin-left: 3px;
      text-align: center;
      font: {
        size: 13px;
        weight: bolder;
      }
    }

    &__Icon {
      width: 11px;
      height: 11px;
      background: {
        size: contain;
        repeat: no-repeat;
        position: center;
        image: url('#{$static-folder-url}/like-icon.png');
      }
    }
  }

  &__Info {
    margin: 0 6px 1px 8px;

    font-size: 13px;
    line-height: 1.3;
    overflow-wrap: break-word;
    word-wrap: break-word;
    word-break: break-all;

    p {
      margin: 0;
    }

    &__Username {
      font-weight: bolder;
      margin-right: 4px;
    }
  }

  &__Comments {
    display: flex;
    flex-direction: column;
    margin: 0 6px 2px 8px;

    font-size: 13px;
    line-height: 1.3;
    overflow-wrap: break-word;
    word-wrap: break-word;
    word-break: break-all;

    &__More {
      color: #606060;
    }

    &__Preview {
      &__Username {
        font-weight: bolder;
        margin-right: 4px;
      }
    }
  }

  &__Additional {
    margin: 0 6px 2px 8px;

    font-size: 10px;
    line-height: 1.3;

    &__Date {
      color: #606060;
    }

    &__Translate {
    }
  }
}

